<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"

    android:background="@android:color/transparent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bullettin_board_layout"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <!-- PHOTO BOARD TEXT  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bullettin_board_icon"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensansbold"
                android:textColor="@color/boardyellowcolor"
                android:text="@string/categoriesTextBoard"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/categoryBlockTextView"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="7.5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/block"
                    android:background="@drawable/bullettin_board_edittext"
                    android:textColor="@color/boardyellowcolor"
                    android:textSize="17sp"
                    android:fontFamily="@font/opensansbold"
                    android:padding="12dp"
                    />

                <TextView
                    android:id="@+id/categorySeedTextView"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="7.5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/seed"
                    android:textSize="17sp"
                    android:fontFamily="@font/opensansbold"
                    android:background="@drawable/bullettin_board_edittext"
                    android:textColor="@color/boardyellowcolor"
                    android:padding="12dp"
              />

                <TextView
                    android:id="@+id/categoryWorldTextView"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="7.5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/world"
                    android:textSize="17sp"
                    android:fontFamily="@font/opensansbold"
                    android:background="@drawable/bullettin_board_edittext"
                    android:textColor="@color/boardyellowcolor"
                    android:padding="12dp"
      />


                <TextView
                    android:id="@+id/categoryDailyQuestTextView"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="7.5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dailyquestText"
                    android:textSize="17sp"
                    android:fontFamily="@font/opensansbold"
                    android:background="@drawable/bullettin_board_edittext"
                    android:textColor="@color/boardyellowcolor"
                    android:padding="12dp"
                    />

                <TextView
                    android:id="@+id/categoryServicesTextView"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="7.5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/services"
                    android:textSize="17sp"
                    android:fontFamily="@font/opensansbold"
                    android:background="@drawable/bullettin_board_edittext"
                    android:textColor="@color/boardyellowcolor"
                    android:padding="12dp"
            />

                <TextView
                    android:id="@+id/categoryStoresTextView"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="7.5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stores"
                    android:textSize="17sp"
                    android:fontFamily="@font/opensansbold"
                    android:background="@drawable/bullettin_board_edittext"
                    android:textColor="@color/boardyellowcolor"
                    android:padding="12dp"
                 />

                <TextView
                    android:id="@+id/categoryPacksTextView"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="7.5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/packs"
                    android:textSize="17sp"
                    android:fontFamily="@font/opensansbold"
                    android:background="@drawable/bullettin_board_edittext"
                    android:textColor="@color/boardyellowcolor"
                    android:padding="12dp"
                   />


                <TextView
                    android:id="@+id/categoryRentTextView"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="7.5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rent"
                    android:textSize="17sp"
                    android:fontFamily="@font/opensansbold"
                    android:background="@drawable/bullettin_board_edittext"
                    android:textColor="@color/boardyellowcolor"
                    android:padding="12dp"
               />

                <TextView
                    android:id="@+id/categoryUtilitiesTextView"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="7.5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/utilities"
                    android:textSize="17sp"
                    android:fontFamily="@font/opensansbold"
                    android:background="@drawable/bullettin_board_edittext"
                    android:textColor="@color/boardyellowcolor"
                    android:padding="12dp"
              />

                <TextView
                    android:id="@+id/categoryBFGTextView"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="7.5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/BFG"
                    android:textSize="17sp"
                    android:fontFamily="@font/opensansbold"
                    android:background="@drawable/bullettin_board_edittext"
                    android:textColor="@color/boardyellowcolor"
                    android:padding="12dp"
              />


                <TextView
                    android:id="@+id/categoryClothesTextView"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="7.5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Clothes"
                    android:textSize="17sp"
                    android:fontFamily="@font/opensansbold"
                    android:background="@drawable/bullettin_board_edittext"
                    android:textColor="@color/boardyellowcolor"
                    android:padding="12dp"
              />

                <TextView
                    android:id="@+id/categorySurgeryTextView"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="7.5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Surgery"
                    android:textSize="17sp"
                    android:fontFamily="@font/opensansbold"
                    android:background="@drawable/bullettin_board_edittext"
                    android:textColor="@color/boardyellowcolor"
                    android:padding="12dp"
            />

                <TextView
                    android:id="@+id/categoryFishingTextView"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="7.5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Fishing"
                    android:textSize="17sp"
                    android:fontFamily="@font/opensansbold"
                    android:background="@drawable/bullettin_board_edittext"
                    android:textColor="@color/boardyellowcolor"
                    android:padding="12dp"
   />

                <TextView
                    android:id="@+id/categoryIOTMTextView"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="7.5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/IOTM"
                    android:textSize="17sp"
                    android:fontFamily="@font/opensansbold"
                    android:background="@drawable/bullettin_board_edittext"
                    android:textColor="@color/boardyellowcolor"
                    android:padding="12dp"
/>

                <TextView
                    android:id="@+id/categoryFestivalTextView"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="1.5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Festival"
                    android:textSize="17sp"
                    android:fontFamily="@font/opensansbold"
                    android:background="@drawable/bullettin_board_edittext"
                    android:textColor="@color/boardyellowcolor"
                    android:padding="12dp" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="8dp"
            app:backgroundTint="@color/boardcancelcolor"
            android:text="@string/canceltext"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="8dp"
            android:textAllCaps="false"
            android:fontFamily="@font/opensansbold"
            android:textColor="@color/boardwhitecolor"
            android:textSize="18sp" />





    </LinearLayout>



</RelativeLayout>