<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterTwoActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/register_background"
        android:scaleType="centerCrop"
        android:foreground="@drawable/blackforeground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bullettin_board_layout"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true">

        <!-- REGISTER BOARD TEXT  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bullettin_board_icon"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensansbold"
                android:textColor="@color/boardyellowcolor"
                android:text="@string/finalsteps"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensansbold"
            android:textColor="@color/boardyellowcolor"
            android:text="@string/youcanuseaz"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="2dp"/>

        <!-- GROW ID -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="15dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/grow_head"
                />

            <EditText
                android:id="@+id/growid_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bullettin_board_edittext"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginLeft="7dp"
                android:textColor="@color/boardwhitecolor"
                android:textSize="16sp"
                android:singleLine="true"
                android:digits="ABCÇDEFGĞHIİJKLMNOÖPQRSŞTUÜVWXYZabcçdefgğhıijklmnoöprsşqtuüvwxyz1234567890._"
                android:text=""
                android:hint="@string/exampleusername"
                android:textColorHint="#CACACA"
                android:fontFamily="@font/opensansbold"
                android:inputType="textFilter" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensansbold"
            android:textColor="@color/boardyellowcolor"
            android:text="@string/tocommo"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensansbold"
            android:textColor="@color/boardyellowcolor"
            android:text="@string/thispartcanbeleftblank"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="4dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensansbold"
            android:textColor="@color/boardyellowcolor"
            android:text="@string/werecommend"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="4dp"/>

        <!-- Main WORLD -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="15dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/main_world"
                />

            <EditText
                android:id="@+id/mainworld_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bullettin_board_edittext"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginLeft="7dp"
                android:textColor="@color/boardwhitecolor"
                android:textSize="16sp"
                android:singleLine="true"
                android:digits="ABCÇDEFGĞHIİJKLMNOÖPQRSŞTUÜVWXYZabcçdefgğhıijklmnoöprsşqtuüvwxyz1234567890"
                android:text=""
                android:hint="@string/worldname"
                android:textColorHint="#CACACA"
                android:fontFamily="@font/opensansbold"
                android:inputType="textFilter" />

        </LinearLayout>


        <!-- Instagram -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="15dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/instagram"
                />

            <EditText
                android:id="@+id/instagram_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bullettin_board_edittext"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginLeft="7dp"
                android:textColor="@color/boardwhitecolor"
                android:textSize="16sp"
                android:singleLine="true"
                android:digits="ABCÇDEFGĞHIİJKLMNOÖPQRSŞTUÜVWXYZabcçdefgğhıijklmnoöprsşqtuüvwxyz1234567890._"
                android:text=""
                android:hint="@string/instaexampleuser"
                android:textColorHint="#CACACA"
                android:fontFamily="@font/opensansbold"
                android:inputType="textFilter" />

        </LinearLayout>


        <!-- Telegram -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="15dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/telegram"
                />

            <EditText
                android:id="@+id/telegram_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bullettin_board_edittext"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginLeft="7dp"
                android:textColor="@color/boardwhitecolor"
                android:textSize="16sp"
                android:singleLine="true"
                android:digits="ABCÇDEFGĞHIİJKLMNOÖPQRSŞTUÜVWXYZabcçdefgğhıijklmnoöprsşqtuüvwxyz1234567890._"
                android:text=""
                android:hint="@string/telegramexampleuser"
                android:textColorHint="#CACACA"
                android:fontFamily="@font/opensansbold"
                android:inputType="textFilter" />

        </LinearLayout>




        <!-- BUTTON'S -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="15dp"
            android:gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/readyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="8dp"
                android:layout_marginTop="3dp"
                app:backgroundTint="@color/boardacceptcolor"
                android:text="@string/imready"
                android:textAllCaps="false"
                android:fontFamily="@font/opensansbold"
                android:textColor="@color/boardwhitecolor"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>